js/src/tests/test262/language/import/import-defer/errors/get-other-while-dep-evaluating/main.js
import
"
.
/
dep
-
1_FIXTURE
.
js
"
;
assert
(
globalThis
[
"
evaluating
dep2
.
foo
error
"
]
instanceof
TypeError
"
evaluating
dep2
.
foo
throws
a
TypeError
"
)
;
assert
(
!
globalThis
[
"
evaluating
dep2
.
foo
evaluates
dep3
"
]
"
evaluating
dep2
.
foo
does
not
evaluate
dep3
"
)
;
assert
(
!
globalThis
.
dep3evaluated
"
dep3
is
not
evaluated
at
all
"
)
;
reportCompare
(
0
0
)
;
